--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Responsividade</title>
 
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@800&display=swap" rel="stylesheet">
 </head>
 
 <body>
