--- a/index.html
+++ b/index.html
@@ -11,16 +11,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700;800&display=swap" rel="stylesheet">
-    
+
 </head>
 
 <body>
     <main>
-        <p>NOSSO TRABALHO</p>
-        <H1>Fazemos projetos para mobile e web</H1>
-        <p>Se você tem uma grande ideia inovadora e que vai transformar vidas, coloque em prática agora com a gente.</p>
-        <a href="#">Saiba mais</a>
+        <div>
+            <p>NOSSO TRABALHO</p>
+            <H1>Fazemos projetos para mobile e web</H1>
+            <p>Se você tem uma grande ideia inovadora e que vai transformar vidas, coloque em prática agora com a gente.
+            </p>
+            <a href="#">Saiba mais</a>
 
+        </div>
+        
         <ul>
             <li><span>1</span> Experiência do usuário</li>
             <li><span>2</span> Pagamentos no aplicativo</li>
